Tue Jan 19 20:59:59 CET 2016
	Cleaned up and optimized with minor fixes code for
	making sockets non-blocking non-inheritable. -EG

Tue Jan 19 11:14:18 CET 2016
	Removed workaround for Cygwin non-blocking sockets:
	handling non-blocking sockets were fixed in Cygwin
	and libmicrohttpd how uses non-blocking sockets on
	all platforms. -EG

Mon Jan 18 23:54:45 CET 2016
	Cleaned up examples to avoid giving oversimplified code
	that may lead to complications if adopted naively. -CG

Sun Jan 17 11:18:55 CET 2016
	Do no refuse to send response if sendfile() failed with
	EINVAL (common error for files located on SMB/CIF). -EG

Sat Jan 16 19:14:39 CET 2016
	Use US-ASCII only (instead of user locale settings) when
	performing caseless string comparison as required by
	standard. -EG

Tue Jan 12 16:10:09 CET 2016
	Fixed declaraion of MHD_get_reason_phrase_for(). -EG

Mon Jan 11 19:58:50 CET 2016
	Configure.ac small fixes and refactoring. -EG

Fri Dec 18 15:54:50 CET 2015
	Releasing libmicrohttpd 0.9.48. -CG

Tue Dec  15 18:35:55 CET 2015
	Improved compatibility with VS2010 and other older
	compilers. -EG

Tue Dec  8 21:48:44 CET 2015
	Default backlog size for listen socket was changed from
	32 to SOMAXCONN, added new option MHD_OPTION_LISTEN_BACKLOG_SIZE
	to override default backlog size.
	If not all connections can be handled by MHD_select() than
	at least some of connections will be processed instead of
	failing without any processing.
	Fixed redefenition of FD_SETSIZE on W32 so select() will
	work with 2000 connections instead of 64.
	Better handled redefenition of FD_SETSIZE on all
	platforms. -EG

Sat Dec  5 17:30:45 CET 2015
	Close sockets more aggressively in multi-threaded
	mode (possibly relevant for idle servers). -CG

Fri Dec  4 13:53:05 CET 2015
	Releasing libmicrohttpd 0.9.47. -CG

Thu Dec  3 18:21:44 CET 2015
	Reworked VS project files. Used x64 build tools by
	default, many optimizations, fixes.
	Added project files for VS 2015. -EG

Tue Dec  1 14:05:13 CET 2015